--- a/assets/styles/modules/_names.scss
+++ b/assets/styles/modules/_names.scss
@@ -26,3 +26,6 @@ $c-navigation: $namespace + "navigation";
 $c-navigation-search: $namespace + "navigation-search";
 $c-foot: $namespace + "foot";
 
+// WordPress class names, no prefix.
+$c-widget: "widget"
+
