--- a/components/foot/assets/styles/foot.scss
+++ b/components/foot/assets/styles/foot.scss
@@ -9,5 +9,6 @@
 .#{$c-foot} {
 
   display: flex;
+  background-color: $color-page-bg;
 
 }
